# StreamCore32

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  flake.nix
.github/workflows/: clang-format.yml
StreamCore32/: CMakeLists.txt
StreamCore32/bell/: CMakeLists.txt  flake.nix
StreamCore32/bell/main/audio-sinks/esp/: VS1053.cpp
StreamCore32/bell/main/audio-sinks/include/esp/VS1053/: Kconfig  VS1053.h  patches_flac.h  patches_flac_latm.h
StreamCore32/bell/main/io/: BellHTTPServer.cpp  HTTPClient.cpp  SocketStream.cpp  TLSSocket.cpp  URLParser.cpp  X509Bundle.cpp
StreamCore32/bell/main/io/include/: BellHTTPServer.h  BellSocket.h  HTTPClient.h  SocketStream.h  TCPSocket.h  TLSSocket.h  URLParser.h
StreamCore32/bell/main/platform/esp/: MDNSService.cpp
StreamCore32/bell/main/utilities/: BellLogger.cpp  BellUtils.cpp  Crypto.cpp  NanoPBHelper.cpp
StreamCore32/bell/main/utilities/include/: BellLogger.h  BellTask.h  BellUtils.h  NanoPBHelper.h  WrappedMutex.h  aes.h
StreamCore32/core/: CMakeLists.txt
StreamCore32/core/include/: AudioControl.h  EspRandomEngine.h  Heartbeat.h  Logger.h  NvsCredStore.h  SecureKeyHelper.h  StreamBase.h  StreamCoreFile.h  TimeSync.h  Token.h  WebUi.h  ZeroConf.h  streamcore_nvs.h
StreamCore32/core/src/: AudioControl.cpp  SecureKeyHelper.cpp  ZeroConf.cpp
StreamCore32/stream/: CMakeLists.txt
StreamCore32/stream/qobuz/: CMakeLists.txt
StreamCore32/stream/qobuz/include/: QobuzConfig.h  QobuzPlayer.h  QobuzQueue.h  QobuzSign.h  QobuzStream.h  QobuzTrack.h  WebSocketClient.h  WsManager.h
StreamCore32/stream/qobuz/protobuf/: qconnect_common.proto  qconnect_envelope.proto  qconnect_payload.proto  qconnect_queue.proto  ws.proto
StreamCore32/stream/qobuz/src/: QobuzConfig.cpp  QobuzPlayer.cpp  QobuzSign.cpp  QobuzStream.cpp  QubuzQueue.cpp  WebSocketClient.cpp
StreamCore32/stream/spotify/: CMakeLists.txt  README.md
StreamCore32/stream/spotify/include/: AccessKeyFetcher.h  ApResolve.h  AuthChallenges.h  CDNAudioFile.h  ConstantParameters.h  DeviceStateHandler.h  EventManager.h  LoginBlob.h  MercurySession.h  Packet.h  PlainConnection.h  PlayerContext.h  ProvidedTrack.h  Session.h  ShannonConnection.h  SpotifyCommand.h  SpotifyContext.h  SpotifyStream.h  TimeProvider.h  TrackPlayer.h  TrackQueue.h  TrackReference.h  Utils.h  ZeroConfServer.h
StreamCore32/stream/spotify/protobuf/: authentication.proto  connect.proto  context.proto  context_page.proto  context_player_options.proto  context_track.proto  credentials.proto  keyexchange.proto  login5.proto  mercury.proto  metadata.proto  play_origin.proto  playback.proto  player.proto  queue.proto  restrictions.proto  session.proto  spirc.proto  transfer_state.proto  utils.proto
StreamCore32/stream/spotify/src/: AccessKeyFetcher.cpp  ApResolve.cpp  AuthChallenges.cpp  CDNAudioFile.cpp  DeviceStateHandler.cpp  EventManager.cpp  LoginBlob.cpp  MercurySession.cpp  PlainConnection.cpp  PlayerContext.cpp  Session.cpp  Shannon.cpp  ShannonConnection.cpp  TimeProvider.cpp  TrackPlayer.cpp  TrackQueue.cpp  TrackReference.cpp  Utils.cpp
StreamCore32/stream/webstream/: CMakeLists.txt
StreamCore32/stream/webstream/include/: HttpBackoff.h  MetaPoller.h  Playlist.h  UrlOrigin.h  WebStream.h
StreamCore32/stream/webstream/src/: MetaPoller.cpp
targets/esp32/: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults
targets/esp32/boards/: esp-wrover-b-3.3v.json
targets/esp32/main/: CMakeLists.txt  Kconfig.projbuild  NvsCreds.cpp  NvsCreds.h  main.cpp
